--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
-    <Version>1.2.0</Version>
+    <Version>2.0.0-beta.1</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <PackageTags>NSubstitute, Verify</PackageTags>
     <Description>Adds Verify (https://github.com/VerifyTests/Verify) support for verifying NSubstitute (https://nsubstitute.github.io/) types</Description>
