--- a/src/Verify.NSubstitute/Verify.NSubstitute.csproj
+++ b/src/Verify.NSubstitute/Verify.NSubstitute.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="ProjectDefaults" Version="1.0.89" PrivateAssets="all" />
     <PackageReference Include="NSubstitute" Version="5.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
-    <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
+    <PackageReference Include="Polyfill" Version="0.5.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
