--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,7 +6,7 @@
     <LangVersion>preview</LangVersion>
     <PackageTags>NSubstitute, Verify</PackageTags>
     <Description>Adds Verify (https://github.com/VerifyTests/Verify) support for verifying NSubstitute (https://nsubstitute.github.io/) types</Description>
-    <NoWarn>CS1591;NU5105</NoWarn>
+    <NoWarn>CS1591;NU5105;NU1608;NU1109</NoWarn>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
