refs and cleanup

--- a/src/Verify.NSubstitute/Verify.NSubstitute.csproj
+++ b/src/Verify.NSubstitute/Verify.NSubstitute.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="Polyfill" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
   </ItemGroup>
 </Project>
